FEATURE: Update README with new images for light and dark modes, and add diagram support visuals

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,12 @@ out
 # Temporary folders
 tmp/
 temp/
+
+CLAUDE.md
+.claudeconfig
+.claude
+
+test-markdown-files/
+public/test-markdown-files/
+
+
